some chriono testing

--- a/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj
+++ b/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj
@@ -133,6 +133,9 @@
       <Project>{3f020d71-c979-4cc5-926f-bfb021305470}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\normal_test.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
