--- a/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
+++ b/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\normal_test.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
