Created a TesterMap class to test the map, todo: output in files for gnuplot

--- a/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
+++ b/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="src\normal_test.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\TesterMap.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
