--- a/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj
+++ b/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj
@@ -135,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\normal_test.hpp" />
+    <ClInclude Include="src\TesterMap.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
