--- a/SkeLibEd/SkeLibEd.vcxproj.filters
+++ b/SkeLibEd/SkeLibEd.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="src\Scan.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\DynamicMap.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\skelibed.cpp">
