--- a/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
+++ b/SkeLibEd_Tester/SkeLibEd_Tester.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\TestCollatz.hpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\normal_test.hpp">
@@ -27,6 +30,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\TestMaps.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestMandelbrot.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TestNBody.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
