--- a/SkeLibEd/SkeLibEd.vcxproj
+++ b/SkeLibEd/SkeLibEd.vcxproj
@@ -120,8 +120,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\DynamicMap4.hpp" />
+    <ClInclude Include="src\DynamicMap.hpp" />
+    <ClInclude Include="src\DynamicMap2.hpp" />
+    <ClInclude Include="src\DynamicMap3.hpp" />
     <ClInclude Include="src\DynamicMap5.hpp" />
+    <ClInclude Include="src\DynamicMap4.hpp" />
     <ClInclude Include="src\Scan.hpp" />
     <ClInclude Include="src\Map.hpp" />
     <ClInclude Include="src\MapReduce.hpp" />
